syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.langhakers.talki.audio.proto";
option java_outer_classname = "AudioProto";

service AudioService {
  rpc createAudio(AudioRequest) returns (AudioResponse);
  rpc getAudioById(AudioIdRequest) returns (AudioResponse);
  rpc getAllAudios(GetAllAudiosRequest) returns (AudioList);
  rpc deleteAudioById(AudioIdRequest) returns (DeleteAudioResponse);
  rpc updateAudioById(AudioRequest) returns (AudioResponse);
}

message AudioRequest {
  string file_name = 1;
  int64 duration_millis = 2;
}

message AudioResponse {
  int64 id = 1;
  string file_name = 2;
  int64 duration_millis = 3;
  string file_url = 4;
  string created_at = 5;
}

message AudioIdRequest {
  int64 id = 1;
}

message AudioList {
  repeated AudioResponse audios = 1;
}

message DeleteAudioResponse {
  string message = 1;
}

message GetAllAudiosRequest {}  // ðŸ‘ˆ Empty ëŒ€ì²´ ë©”ì‹œì§€

